modify userProfile and add change email.

--- a/src/main/webapp/mdb/css/default.css
+++ b/src/main/webapp/mdb/css/default.css
@@ -171,8 +171,11 @@ h1.title{
         }
     }
 }
-.shopping-cart{
-    position: absolute;
+.navbar-nav{
+    display: flex;
+    justify-content: space-between;
+}
+.nav-item.shopping-cart{
     transform: translate(-50%, -50%);
 }
 .number{
