--- a/src/main/webapp/mdb/css/styleKey.css
+++ b/src/main/webapp/mdb/css/styleKey.css
@@ -73,9 +73,10 @@
     padding-right: 5px;
 
 }
+
 .form-control{
     width: 450px;
-    height: 50px;
+    height: 30px;
     margin-left: 5px;
     margin-right: 3px;
 
@@ -91,12 +92,43 @@
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 600; }
+.inpri{
+    width: 450px;
+    height: 30px;
+    margin-left: 45px;
+}
+.btncreate{
+    margin-left: 450px;
+}
 .btnblock{
-    width: 200px;
+    width: 100px;
     height: 35px;
     background-color: #0d0d0d;
     color: #f1f1f1;
 }
 .fa{
     cursor: pointer;
+}
+
+    #datepicker{
+        width:180px;
+        margin: 0 20px 20px 20px;
+    }
+    #datepicker > span:hover{
+        cursor: pointer;
+    }
+.labelname{
+    color: #000;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    padding-right: 80px;
+}
+.inname{
+    width: 320px;
+    height: 30px;
+    margin-right: 15px;
+    margin-left: -50px;
+
+
 }
