create datatable for category table

--- a/src/main/webapp/admin/assert/css/home.css
+++ b/src/main/webapp/admin/assert/css/home.css
@@ -30,3 +30,6 @@ body {
 .form-outline {
     --mdb-form-outline-select-notch-border-color: #023589;
 }
+#categoryTable{
+    font-family: inherit;
+}
